Update HTML and JS

--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,9 @@
   <title>Todo List</title>
 </head>
 <body>
-  <div id="menu"></div>
+  <div id="menu">
+    <h1>Todo's</h1>
+  </div>
   <div id="content"></div>
 </body>
 </html>
