--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
+  <link rel="shortcut icon" href="assets/todo.png" type="image/x-icon">
 </head>
+
 <body>
   <div id="menu">
-    <h1>Todo's</h1>
+    <h2>Task's:</h2>
   </div>
-  <div id="content"></div>
+  <div id="content">
+    <form action="">
+      <label for="title">Title</label>
+      <input type="text" name="title" id="title">
+      <label for="description">Description</label>
+      <input type="text" name="description" id="description">
+      <label for="date">Date</label>
+      <input type="date">
+      <input type="radio" id="p1" value="p1" name="priotiry">
+      <label for="p1">P1</label>
+      <input type="radio" id="p1" value="p1" name="priotiry">
+      <label for="p1">P2</label>
+      <input type="radio" id="p1" value="p1" name="priotiry">
+      <label for="p1">P3</label>
+
+    </form>
+  </div>
 </body>
+
 </html>
