--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo List</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="assets/todo.png" type="image/x-icon">
 </head>
 
