Update HTML and CSS

--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,11 @@
 
 <body>
   <div id="menu">
-    <h2>Task's:</h2>
+    <div class="header-tasks">
+      <img src="assets/todo.png" alt="todo-list logo" width="30"> <h2>Tasks:</h2>
+    </div>
+    <ul>
+    </ul>
   </div>
   <div id="content">
     <form action="">
