Update HTML, CSS and JS

--- a/src/template.html
+++ b/src/template.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo List</title>
+  <title>Tasks</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="assets/todo.png" type="image/x-icon">
 </head>
@@ -22,12 +22,12 @@
     <h1>TASKS:</h1>
     <ul id="taskList" class="task-list">
       <form action="">
-        <input type="text" name="title" id="title" placeholder="What do you want to do?">
-        <input type="text" name="description" id="description" placeholder="Give a description of this...">
+        <input type="text" name="title" id="title" placeholder="What do you wanna do?">
+        <input type="text" name="description" id="description" placeholder="Give a description of it...">
         <div>
           <input type="date" name="date" id="date">
           <select name="priority" id="priority">
-            <option value="" disabled selected hidden>🔵 Priority</option>
+            <option value="" disabled selected hidden>🔵Priority</option>
             <option value="1">🔴Priority 1</option>
             <option value="2">🟠Priority 2</option>
             <option value="3">🟢Priority 3</option>
@@ -35,7 +35,7 @@
         </div>
         <div class="buttons">
           <button class="cancel">Cancel</button>
-          <button class="add-task">Add task</button>
+          <button class="add-task">Add Task</button>
         </div>
       </form>
     </ul>
