--- a/src/template.html
+++ b/src/template.html
@@ -19,26 +19,7 @@
     </ul>
   </div>
   <div id="content">
-    <h1>TASKS:</h1>
-    <ul id="taskList" class="task-list">
-      <form action="">
-        <input type="text" name="title" id="title" placeholder="What do you wanna do?">
-        <input type="text" name="description" id="description" placeholder="Give a description of it...">
-        <div>
-          <input type="date" name="date" id="date">
-          <select name="priority" id="priority">
-            <option value="" disabled selected hidden>🔵Priority</option>
-            <option value="1">🔴Priority 1</option>
-            <option value="2">🟠Priority 2</option>
-            <option value="3">🟢Priority 3</option>
-          </select>
-        </div>
-        <div class="buttons">
-          <button class="cancel">Cancel</button>
-          <button class="add-task">Add Task</button>
-        </div>
-      </form>
-    </ul>
+    <h1>Tasks:</h1>
   </div>
 </body>
 
