Update HTML and CSS

--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,12 @@
       <h2>Tasks</h2>
     </div>
     <ul>
+      <li><button type="button" id="today">All Tasks</button></li>
+      <li><button type="button" id="today">Today</button></li>
+      <li><button type="button" id="tomorrow">Tomorrow</button></li>
+      <li><button type="button" id="today">This Week</button></li>
+      <li><button type="button" id="today">This Weekend</button></li>
+      <li><button type="button" id="today">This Month</button></li>
     </ul>
   </div>
   <div id="content">
