--- a/src/template.html
+++ b/src/template.html
@@ -16,12 +16,16 @@
       <h2>Tasks</h2>
     </div>
     <ul>
-      <li><button type="button" id="today">All Tasks</button></li>
+      <li><button type="button" id="allTasks">All Tasks</button></li>
+      <li><button type="button" id="high">🔴 High</button></li>
+      <li><button type="button" id="mid">🟠 Mid</button></li>
+      <li><button type="button" id="Low">🟢 Low</button></li>
+      <li><button type="button" id="neutral">🔵 Neutral</button></li>
       <li><button type="button" id="today">Today</button></li>
       <li><button type="button" id="tomorrow">Tomorrow</button></li>
-      <li><button type="button" id="today">This Week</button></li>
-      <li><button type="button" id="today">This Weekend</button></li>
-      <li><button type="button" id="today">This Month</button></li>
+      <li><button type="button" id="thisWeek">This Week</button></li>
+      <li><button type="button" id="thisWeekend">This Weekend</button></li>
+      <li><button type="button" id="thisMonth">This Month</button></li>
     </ul>
   </div>
   <div id="content">
