--- a/src/template.html
+++ b/src/template.html
@@ -25,7 +25,7 @@
   </div>
   <div id="content">
     <h1>Tasks:</h1>
-    <ul id="ulTask"></ul>
+    <ul id="ulTask" class="allTasks"></ul>
   </div>
 </body>
 
